syntax = "proto3";

package GophKeeper.server.proto;

option go_package = "github.com/boginskiy/GophKeeper/server/internal/grpc";

service KeeperService {
  rpc RegistUser (RegistUserRequest) returns (RegistUserResponse);
  rpc AuthUser (AuthUserRequest) returns (AuthUserResponse);
}

message RegistUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string phonenumber = 4;
}

message RegistUserResponse {
    string status = 1;
}

message AuthUserRequest {
  string email = 1;
  string password = 2;
}

message AuthUserResponse {
    string status = 1;
}
